<resources>
    <string name="app_name">FirstApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_header">Find your weight in other Planets!</string>
    <string name="earth_weight">What is your weight on the Earth?</string>
    <string name="findButton">Find</string>
    <string name="resultText">Result</string>
    <string name="marsCB">Mars</string>
    <string name="venusCB">Venus</string>
    <string name="jupiterCB">Jupiter</string>
</resources>